--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,21 @@ header {
 header img {
   width: 100px;
 }
-header #carouselExampleFade {
-  display: flex;
-  width: 100%;
-  height: 45%;
-  justify-content: center;
-  align-items: center;
+header .container {
+  padding-top: 20px;
 }
-header #carouselExampleFade img {
-  width: 100%;
-  height: 45%;
-  object-fit: cover;
+
+body {
+  background-color: whitesmoke;
 }
 
 main {
-  margin-top: 30px;
+  margin: 10px 20px;
   color: black;
+  background-color: whitesmoke;
+  /* etiquetas contactos */
+  /* etiquetas eventos */
+  /* etiquetas sobre nosotros */
 }
 main h1 {
   text-align: center;
@@ -41,17 +40,50 @@ main p {
   margin-left: 20px;
   margin-right: 20px;
 }
-main .card {
+main .artistas {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 50px;
+}
+main .tit-consul {
+  margin-top: 20px;
+}
+main .text-consul {
+  text-align: center;
+  margin-top: 20px;
+}
+main .consultas {
+  padding: 20px;
+}
+main .main-eventos {
   display: grid;
-  grid-template-rows: 4fr;
+  height: 80vh;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 20%);
+  align-content: center;
+  row-gap: 20px;
+}
+main .pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  padding-top: 20px;
+}
+main .tit-eventos {
+  padding-left: 20px;
+}
+main .tit-sobre2 {
+  padding-left: 20px;
 }
 
 /* estilos del footer */
 footer {
   color: black;
-  text-align: center;
+  text-align: end;
+  padding-right: 20px;
 }
-
-/* estilos de pagina artistas */
 
 /*# sourceMappingURL=style.css.map */
